# Endpoints
OTP_ENDPOINT = "https://apix.hotstar.com/v2/pages/1/spaces/1/widgets/8"
OTP_VERIFY_ENDPOINT = "https://apix.hotstar.com/v2/pages/1/spaces/1/widgets/9"


# Misc
USER_AGENT = "User-Agent: Hotstar;in.startv.hotstar/23.09.11.19.9094 (Android/11)"
PROTOBUF_CONTENT_TYPE = "application/x-protobuf"

APP_VALUE = "9094"
APP_VALUE_ID = "010868fa-110c-4bca-a256-00d8e314d0e2"

# edit these values to match your own if needed
HS_CLIENT = ("X-HS-Client: platform:android;app_id:in.startv.hotstar;app_version:23.09.11.19;os:Android;os_version:11"
             ";schema_version:0.0.1017;brand:Xiaomi;model:Redmi Note 6 Pro;carrier:airtel;network_data:UNKNOWN")
HS_CLIENT_TARGETING = "ad_id:;user_lat:false;hw_id:{}"
HS_PLATFORM = "android"
HS_SCHEMA_VERSION = "0.0.1017"


# Secrets
HSAUTH_ENCRYPTION_KEY = b"\x05\xfc\x1a\x01\xca\xc9\x4b\xc4\x12\xfc\x53\x12\x07\x75\xf9\xee"


# Paths
CREDFILE = "token.json"
